# dayboard

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  dayboard-archive-keyring.gpg  index.html
.github/: apt-index.html  apt-page-style.html
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: auth.rs  db.rs  lib.rs  models.rs  schema.sql  sync.rs
daemon/: Cargo.toml
daemon/src/: main.rs
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
gui/: Cargo.toml
gui/assets/: dayboard-gui.desktop
gui/src/: calendar.rs  icons.rs  main.rs  theme.rs
pool/main/: dayboard-daemon_0.1.2-1_amd64.deb  dayboard-daemon_0.1.3-1_amd64.deb  dayboard-daemon_0.1.4-1_amd64.deb  dayboard-daemon_0.1.5-1_amd64.deb  dayboard-tui_0.1.2-1_amd64.deb  dayboard-tui_0.1.3-1_amd64.deb  dayboard-tui_0.1.4-1_amd64.deb  dayboard-tui_0.1.5-1_amd64.deb
tui/: Cargo.toml
tui/src/: main.rs
