[package]
name = "caldav_core"
version = "0.1.4"
edition = "2024"
license.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = "0.4.45"
rand = "0.10.2"
reqwest = { version = "0.13.4", features = ["blocking", "form", "json", "query"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
url = "2.5.8"
